# p2000-rust

./: .gitignore  Cargo.toml  README.md
data/: Observations.csv  RegioSCodes.csv  abbrevations.txt  capcodelist.csv  p2000-1.txt
src/: location.rs  lookup.rs  main.rs  parser.rs  reader.rs  tui.rs
